# docs/swagger.json
@@ -15,6 +15,67 @@
     },
     "basePath": "/sentinel",
     "paths": {
+        "/certificates/check": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "This endpoint checks the SSL/TLS certificate of a given domain and returns its details. Only one domain can be checked at a time.",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Certificates"
+                ],
+                "summary": "Check a given domain certificate",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Domain",
+                        "name": "domain",
+                        "in": "query",
+                        "required": true
+                    },
+                    {
+                        "type": "integer",
+                        "description": "Expire days, default is config.C.App.Expire value",
+                        "name": "expire",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Certificate details retrieved successfully",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Certificate check failed due to invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponse"
+                        }
+                    },
+                    "422": {
+                        "description": "Certificate check failed due to invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Certificate check failed due to internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/models.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/certificates/scan": {
             "get": {
                 "security": [
@@ -48,67 +109,6 @@
                     },
                     "422": {
                         "description": "Certificate check failed due to invalid request body",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "Certificate check failed due to internal server error",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/certificates/{domain}": {
-            "get": {
-                "security": [
-                    {
-                        "BearerAuth": []
-                    }
-                ],
-                "description": "This endpoint checks the SSL/TLS certificate of a given domain and returns its details. Only one domain can be checked at a time.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Certificates"
-                ],
-                "summary": "Check a given domain certificate",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "yunusemrealpu.netlify.app:443",
-                        "name": "domain",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "integer",
-                        "description": "Expire days, default is config.C.App.Expire value",
-                        "name": "expire",
-                        "in": "query"
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "Certificate details retrieved successfully",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "Certificate check failed due to invalid request",
-                        "schema": {
-                            "$ref": "#/definitions/models.APIResponse"
-                        }
-                    },
-                    "422": {
-                        "description": "Certificate check failed due to invalid request",
                         "schema": {
                             "$ref": "#/definitions/models.APIResponse"
                         }
